--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,24 @@
+# Servidor
 PORT=3000
 NODE_ENV=production
-SESSION_SECRET=altere_chave_secreta_longa
+SESSION_SECRET=altere_para_uma_chave_longa_e_secreta
 
+# Banco MySQL - use uma das opções:
+
+# Opção 1: Variáveis separadas (recomendado no servidor)
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=seu_usuario_mysql
 DB_PASSWORD=sua_senha_mysql
 DB_NAME=nome_do_banco
 
+# Opção 2: URL única (alguns provedores usam isso)
+# DATABASE_URL=mysql://usuario:senha@host:3306/nome_do_banco
+
+# URL do site (opcional)
 APP_URL=https://vemnoquiz.com.br
+
+# IMPORTANTE: após configurar o .env
+# 1. Crie o banco no MySQL (phpMyAdmin ou: CREATE DATABASE nome_do_banco;)
+# 2. Execute o arquivo database/schema.sql nesse banco
+# 3. Reinicie a aplicação e teste: https://seusite.com/health-db
