--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "prod": "node server.js"
+    "prod": "node server.js",
+    "db:init": "node database/init.js"
   },
   "engines": {
     "node": ">=18.x"
