--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,5 @@ DB_NAME=nome_do_banco
 # URL do site (opcional)
 APP_URL=https://vemnoquiz.com.br
 
-# IMPORTANTE: após configurar o .env
-# 1. Crie o banco no MySQL (phpMyAdmin ou: CREATE DATABASE nome_do_banco;)
-# 2. Execute o arquivo database/schema.sql nesse banco
-# 3. Reinicie a aplicação e teste: https://seusite.com/health-db
+# O app cria o banco e as tabelas automaticamente ao subir (não precisa rodar SQL).
+# Use o mesmo DB_USER/DB_PASSWORD de um usuário MySQL que tenha permissão de criar banco (ou crie o banco antes e use um usuário com acesso a ele).
