--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,18 @@
 # Servidor
 PORT=3000
 NODE_ENV=production
+# Use uma string longa e aleatória (ex: openssl rand -hex 32)
 SESSION_SECRET=altere_para_uma_chave_longa_e_secreta
 
-# Banco MySQL - use uma das opções:
-
-# Opção 1: Variáveis separadas (recomendado no servidor)
+# Banco MySQL (obrigatório)
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=seu_usuario_mysql
 DB_PASSWORD=sua_senha_mysql
 DB_NAME=nome_do_banco
 
-# Opção 2: URL única (alguns provedores usam isso)
+# Opcional: alguns provedores usam URL única
 # DATABASE_URL=mysql://usuario:senha@host:3306/nome_do_banco
 
-# URL do site (opcional)
+# Opcional: URL pública do site
 APP_URL=https://vemnoquiz.com.br
-
-# O app cria o banco e as tabelas automaticamente ao subir (não precisa rodar SQL).
-# Use o mesmo DB_USER/DB_PASSWORD de um usuário MySQL que tenha permissão de criar banco (ou crie o banco antes e use um usuário com acesso a ele).
